Figuring out how to spawn points. Work in progress.

--- a/src/app/features/Globe/world/world.html
+++ b/src/app/features/Globe/world/world.html
@@ -1,5 +1,8 @@
 <div class="scene">
-  <div class="sphere" id="sphere"></div>
+  <div class="sphere" id="sphere">
+    <!-- Points will be dynamically added here -->
+    <div class="point" *ngFor="let p of pointsData;" [runOnInit]="p" (init)="createPoint($event)"></div>
+  </div>
 </div>
 
 <div class="popup" id="popup">
