Fixed points not appearing on sphere.

--- a/src/app/features/Globe/world/world.html
+++ b/src/app/features/Globe/world/world.html
@@ -1,7 +1,7 @@
 <div class="scene">
   <div class="sphere" id="sphere">
     <!-- Points will be dynamically added here -->
-    <div class="point" *ngFor="let p of pointsData;" [runOnInit]="p" (init)="createPoint($event)"></div>
+    <div class="point" *ngFor="let p of pointsData;" #pointRef [runOnInit]="{p,pointRef}" (init)="createPoint($event)"></div>
   </div>
 </div>
 
