--- a/src/app/features/Globe/world/world.html
+++ b/src/app/features/Globe/world/world.html
@@ -8,5 +8,5 @@
 <div class="popup" id="popup">
   <h3 id="popup-title"></h3>
   <p id="popup-content"></p>
-  <button onclick="closePopup()">Close</button>
+  <button (click)="closePopup()">Close</button>
 </div>
