Got textures projected onto sphere as decal, able to click on textures and got sphere correctly sized.

--- a/src/app/features/Globe/world/world.html
+++ b/src/app/features/Globe/world/world.html
@@ -6,5 +6,5 @@
 <div class="popup" id="popup">
   <h3 id="popup-title"></h3>
   <p id="popup-content"></p>
-  <button (click)="closePopup()">Close</button>
+  <button (click)="closePopup($event)">Close</button>
 </div> 
