--- a/src/app/features/Globe/world/world.html
+++ b/src/app/features/Globe/world/world.html
@@ -2,9 +2,4 @@
   <!-- WebGL Canvas -->
   <canvas #globeCanvas id="globeCanvas"></canvas>
 </div>
-
-<div class="popup" id="popup">
-  <h3 id="popup-title"></h3>
-  <p id="popup-content"></p>
-  <button (click)="closePopup($event)">Close</button>
-</div> 
+<div>
