--- a/src/app/features/Globe/popup/popup.css
+++ b/src/app/features/Globe/popup/popup.css
@@ -14,7 +14,15 @@
   text-align: center;
   pointer-events: auto;
  }
+.close-button img {
+  width: 20px;
+  height: 20px;
+  background-color: #ff4d4d;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
 
-button:hover {
+.close-button:hover {
   cursor: pointer;
 }
