--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,8 @@
 <main class="main">
-  <app-world></app-world>
-  <app-popup></app-popup>
+  <div id="star-container">
+    <div id="stars">
+    </div>
+    <app-world></app-world>
+    <app-popup></app-popup>
+  </div>
 </main>
