--- a/src/app/app.html
+++ b/src/app/app.html
@@ -2,6 +2,8 @@
   <div id="star-container">
     <div id="stars">
     </div>
+    <div id="stars-larger">
+    </div>
     <app-world></app-world>
     <app-popup></app-popup>
   </div>
