--- a/src/app/app.html
+++ b/src/app/app.html
@@ -4,6 +4,11 @@
     </div>
     <div id="stars-larger">
     </div>
+    <div id="title">
+      <h1> Portfolio </h1>
+      <h1> Globe </h1>
+      <p> by Vlado Smolovic</p>
+    </div>
     <app-world></app-world>
     <app-popup></app-popup>
   </div>
